--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,4 @@
 all: main
 CC = cc
 main: main.c
-	$(CC) main.c -o main -framework OpenGL -lOpenVG -lp5graphics -lglfw -I../src -I../include -L. -I.
+	$(CC) main.c -o main -framework OpenGL -lOpenVG -lp5graphics -lglfw -I../src -I../include -L../src -I.
